Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: First Project
+title: An Exciting Journey ! 
 header-img: img/home-bg.png
 email: nichia@gmail.com
 copyright_name: nichia
